--- a/index.html
+++ b/index.html
@@ -7,18 +7,8 @@
     <title>Super Mario</title>
   </head>
   <body>
-    
-    <script src="https://unpkg.com/kaboom/dist/kaboom.js"></script>
-    <script type="module">
-      // import kaboom lib
-      import kaboom from "https://unpkg.com/kaboom/dist/kaboom.mjs";
 
-      // initialize kaboom context
-      kaboom();
-
-      // add a piece of text at position (120, 80)
-      add([text("hello"), pos(120, 80)]);
-    </script>
+    <script src="https://kaboomjs.com/lib/0.5.0/kaboom.js"></script>
     <script src="game.js"></script>
   </body>
 </html>
